add about us image

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         const aboutUsContent = {
             title: "關於我們：團錄冒險",
             description: "我們是一群熱愛TRPG的玩家，致力於將每一次精彩的冒險、動人的故事和爆笑的瞬間記錄下來，並與更多同好分享。我們相信，TRPG不僅僅是個遊戲，更是一場集體創作的藝術。希望這個網站能成為你尋找下一個冒險、或是分享你自己的故事的溫馨角落。\n\n如果你對我們的網站有任何建議，或者想分享你的團錄，歡迎隨時聯繫我們！",
-            image: "about-us.jpg"
+            image: "dicecat_introduction.png"
         };
         modalTitle.textContent = aboutUsContent.title;
         modalDescription.textContent = aboutUsContent.description;
