fix image path error

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         };
         modalTitle.textContent = aboutUsContent.title;
         modalDescription.textContent = aboutUsContent.description;
-        modalImage.style.backgroundImage = `url('/img/${aboutUsContent.image}')`;
+        modalImage.style.backgroundImage = `url('img/${aboutUsContent.image}')`;
         modal.classList.remove('hidden');
     }
 
