--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     let currentIndex = 0;
     let intervalId;
     let trpgData = []; // 存放從 JSON 讀取的資料
+    let carouselItems = []; // 存放固定的輪播項目
 
     // Modal 相關元素
     const modal = document.getElementById('modal');
@@ -134,7 +135,8 @@
 
     // 渲染輪播項目
     function renderCarousel() {
-        const carouselData = getRandomCarouselData(trpgData, 3);
+        // 使用固定的 carouselItems 資料
+        const carouselData = carouselItems;
         if (!carouselData || carouselData.length === 0) return;
 
         carousel.innerHTML = '';
@@ -160,6 +162,12 @@
             `;
             carouselItem.innerHTML = content;
             carousel.appendChild(carouselItem);
+            
+            // 綁定輪播按鈕的點擊事件
+            carouselItem.querySelector('.modal-trigger-btn').addEventListener('click', (e) => {
+                e.preventDefault();
+                showModal(carouselItems[currentIndex]);
+            });
 
             const dot = document.createElement('button');
             dot.classList.add('w-3', 'h-3', 'rounded-full', 'bg-gray-700', 'hover:bg-gray-400', 'transition-colors');
@@ -173,21 +181,12 @@
             });
             carouselDots.appendChild(dot);
         });
-
-        // 綁定輪播按鈕的點擊事件
-        carousel.querySelectorAll('.modal-trigger-btn').forEach(button => {
-            button.addEventListener('click', (e) => {
-                e.preventDefault();
-                const index = e.target.dataset.index;
-                showModal(carouselData[index]);
-            });
-        });
     }
 
     function startInterval() {
         if (!trpgData || trpgData.length === 0) return;
         intervalId = setInterval(() => {
-            currentIndex = (currentIndex + 1) % 3; // 輪播固定顯示3個
+            currentIndex = (currentIndex + 1) % carouselItems.length;
             renderCarousel();
         }, 5000);
     }
@@ -229,7 +228,7 @@
     function showModal(item) {
         modalTitle.textContent = item.title;
         modalDescription.textContent = item.description;
-        modalImage.style.backgroundImage = `url('/img/${item.image}')`;
+        modalImage.style.backgroundImage = `url('img/${item.image}')`;
         modal.classList.remove('hidden');
     }
 
@@ -273,6 +272,8 @@
                 throw new Error('Failed to load data.json');
             }
             trpgData = await response.json();
+            // 在載入資料後，只生成一次輪播項目
+            carouselItems = getRandomCarouselData(trpgData, 3);
             renderCarousel();
             startInterval();
             renderCards();
