--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 <!-- 頂部導覽列 (Header) -->
 <header id="header" class="bg-gray-900 shadow-lg fixed w-full top-0 z-50">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <div id="logo-title-container" class="flex items-center space-x-4 flex-shrink-0">
+        <a id="logo-title-container" href="https://firesidetales.vercel.app/" class="flex items-center space-x-4 flex-shrink-0 no-underline">
             <img src="img/favicon-32x32.png" alt="網站Logo" class="w-8 h-8">
             <span class="hidden sm:inline text-3xl font-bold text-gray-100">說書人的爐邊夜話</span>
-        </div>
+        </a>
         <div class="flex items-center justify-end flex-grow">
-            <div id="search-container" class="relative mr-2 sm:mr-6 w-full sm:w-auto">
+            <div id="search-container" class="relative mr-2 sm:mr-6 w-full sm:w-32 sm:focus-within:w-64 transition-all duration-300">
                 <div class="relative flex items-center w-full bg-gray-800 rounded-full focus-within:ring-2 focus-within:ring-indigo-500">
                     <i class="fas fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
                     <div id="search-tags-input-container" class="flex items-center gap-2 pl-10 pr-4 py-1 w-full">
