Refine mobile search bar behavior

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 display: none;
             }
             #header.search-active #search-container {
+                width: 100%;
                 flex-grow: 1;
             }
             #header.search-active #main-nav {
@@ -82,12 +83,12 @@
             <span class="hidden sm:inline text-3xl font-bold text-gray-100">說書人的爐邊夜話</span>
         </a>
         <div class="flex items-center justify-end flex-grow">
-            <div id="search-container" class="relative mr-2 sm:mr-6 w-full sm:w-32 sm:focus-within:w-64 transition-all duration-300">
+            <div id="search-container" class="relative mr-2 sm:mr-6 w-20 transition-all duration-300 sm:w-32 sm:focus-within:w-64">
                 <div class="relative flex items-center w-full bg-gray-800 rounded-full focus-within:ring-2 focus-within:ring-indigo-500">
                     <i class="fas fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
                     <div id="search-tags-input-container" class="flex items-center gap-2 pl-10 pr-4 py-1 w-full">
                         <!-- 搜尋關鍵字標籤 -->
-                        <input type="text" placeholder="搜尋或新增標籤..." class="bg-transparent text-gray-200 focus:outline-none flex-grow min-w-[100px]" id="search-input">
+                        <input type="text" placeholder="搜尋或新增標籤..." class="bg-transparent text-gray-200 focus:outline-none flex-grow min-w-0 sm:min-w-[100px]" id="search-input">
                     </div>
                     <button id="search-cancel-btn" class="hidden sm:hidden absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-white">
                         <i class="fas fa-times-circle"></i>
