Show header title and nav on small screens

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <a id="logo-title-container" href="https://firesidetales.vercel.app/" class="flex items-center space-x-4 flex-shrink-0 no-underline">
             <img src="img/favicon-32x32.png" alt="網站Logo" class="w-8 h-8">
-            <span class="hidden sm:inline text-3xl font-bold text-gray-100">說書人的爐邊夜話</span>
+            <span class="text-xl sm:text-3xl font-bold text-gray-100">說書人的爐邊夜話</span>
         </a>
         <div class="flex items-center justify-end flex-grow">
             <div id="search-container" class="relative mr-2 sm:mr-6 w-20 transition-all duration-300 sm:w-32 sm:focus-within:w-64">
@@ -98,9 +98,9 @@
                 <div id="search-results-list" class="absolute top-full left-0 mt-2 w-full max-h-[70vh] overflow-y-auto bg-gray-800 rounded-lg shadow-xl hidden"></div>
             </div>
             <nav id="main-nav" class="flex items-center space-x-6">
-                <a href="#" class="hidden sm:block text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors">首頁</a>
-                <a href="#archive" class="hidden sm:block text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors">團錄清單</a>
-                <a href="#" class="hidden sm:block text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors" id="about-us-btn">關於我們</a>
+                <a href="#" class="text-base sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors">首頁</a>
+                <a href="#archive" class="text-base sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors">團錄清單</a>
+                <a href="#" class="text-base sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors" id="about-us-btn">關於我們</a>
             </nav>
         </div>
     </div>
