--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </div>
             <nav id="main-nav" class="flex items-center space-x-1 sm:space-x-6">
                 <a href="#" class="hidden sm:inline-block text-sm sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors">首頁</a>
+				<a href="https://forms.gle/8K5hTjVHwWioyR9M8" class="hidden sm:inline-block text-sm sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors" target="_blank" rel="noopener noreferrer">投稿團錄</a>
                 <a href="#archive" class="hidden sm:inline-block text-sm sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors">團錄清單</a>
                 <a href="#" class="hidden sm:inline-block text-sm sm:text-lg font-semibold text-gray-300 hover:text-indigo-400 transition-colors" id="about-us-btn">關於我們</a>
             </nav>
