add youtube link transform function(the page link should use embedded url)

--- a/index.html
+++ b/index.html
@@ -445,11 +445,31 @@
 
         // 主題影片
         if (item.theme) {
+			// 建立一個函式來將標準 YouTube 網址轉換為嵌入式網址
+			const getYouTubeEmbedUrl = (url) => {
+				if (!url) {
+					return ""; // 如果沒有網址，返回空字串
+				}
+				// 將 "watch?v=" 替換成 "embed/"
+				// 這是最關鍵的一步
+				const embedUrl = url.replace("watch?v=", "embed/");
+				return embedUrl;
+			};
+
+			// 在你的原始程式碼中使用這個函式
+			const embeddableUrl = getYouTubeEmbedUrl(item.theme);
             modalThemeContainer.innerHTML = `
-                <div class="aspect-w-16 aspect-h-9 border border-gray-600 rounded-lg overflow-hidden">
-                    <iframe src="${item.theme}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            `;
+			<div class="aspect-w-16 aspect-h-9 border border-gray-600 rounded-lg overflow-hidden">
+				<iframe 
+					class="w-full h-full" 
+					src="${embeddableUrl}" 
+					title="YouTube video player" 
+					frameborder="0" 
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					allowfullscreen>
+				</iframe>
+			</div>
+		`;
             modalThemeContainer.classList.remove('hidden');
         } else {
             modalThemeContainer.innerHTML = '';
